get y delet
